Nit: Shrink long warning in example build scripts
Now that I know JPMS a bit better AND I've done a bunch of work to
try to modularize Kotter (and given up on it for now, see:
https://github.com/varabyte/kotter/issues/152), I figured I wouldn't
give people the hope that this would get better someday. Instead, for
Kotlin apps, probably better just to disable the warning and move on
with our lives.